<resources>
    <string name="app_name">CameraCar</string>
    <!--STATUS VIEW-->
    <string name="status_layout_wifi_connection_label">Wi-Fi Connection</string>
    <string name="status_layout_ssid">SSID:</string>
    <string name="status_layout_wifi_status">Status:</string>
    <string name="status_layout_signal_strength">Signal strength:</string>
    <string name="status_layout_tcp_label">Vehicle control TCP server</string>
    <string name="status_layout_tcp_ip">Server IP:</string>
    <string name="status_layout_tcp_status">Status:</string>
    <string name="status_layout_udp_label">Camera control UDP server</string>
    <string name="status_layout_udp_ip">Server IP:</string>
    <string name="status_layout_udp_status">Status:</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_active">Active</string>
    <string name="status_error">Error</string>
</resources>
